<resources>
    <string name="app_name">EasyTrack</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="label_co_title">its easy to track</string>
    <string name="label_title_easy">easy</string>
    <string name="label_title_track">track</string>
    <string name="label_co_title_2">to track</string>
    <string name="label_co_title_1">it\'s easy</string>
    <string name="phone_auth_prompt">OTP will be sent to the this number.</string>
    <string name="charges_applied">*Charges may apply!</string>
    <string name="or_connect_with">or connect with</string>
    <string name="sign_in_with_google">SignIn with Google</string>
    <string name="hint_phone">Enter 10 digit mobile no.</string>
    <string name="code_india">+91(IN)</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in_with_phone">SignIn with Phone</string>
    <string name="sign_in_with_email">SignIn with Email</string>
    <string name="title_activity_sign_up_with_phone">SignUpWithPhoneActivity</string>
    <string name="authenticate">Hi, welcome here!</string>
    <string name="otp_sent_prompt">We have sent an otp to this number.</string>
    <string name="otp_reading_prompt">Please wait while we auto verify the number.</string>
    <string name="otp_failure_prompt">Didn\'t receive an otp?</string>
    <string name="otp_resend_prompt">Resend OTP.</string>
    <string name="otp_error_message">We couldn\'t auto-verify the otp. If you have received an otp, then try entering manually.</string>
    <string name="action_logout">Logout</string>
    <string name="account">Account</string>
    <string name="about_us">About Us</string>
    <string name="this_release">About This Release</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="need_help">Need Help?</string>
    <string name="version">v1.0</string>
    <string name="hint_user_id">User Id</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_details">Forgot Details?</string>
    <string name="or_register_with">OR REGISTER WITH</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">Log In</string>
    <string name="hint_user_name">Your name</string>
    <string name="hint_user_email">Your email</string>
    <string name="hint_user_ward">Add your ward</string>
    <string name="hint_driver_vendor">Add your vendor</string>
    <string name="hint_add_vehicle">Add vehicle</string>
    <string name="hint_enter_vehicle_no">Enter vehicle no</string>
    <string name="label_select_driver">Select Driver</string>
    <string name="label_assign_driver">Assign Driver</string>
    <string name="label_assign_route">Assign Route</string>
    <string name="hint_add_friend">Add Friend</string>
    <string name="hint_user_phone">Your phoneNumber</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="firebase_path">location</string>
    <string name="location_updated">Last location updated</string>
    <string name="launch_activity">Launch</string>
    <string name="remove_location_updates">Remove</string>
    <string name="hint_search_contact">Search by name or phone number</string>
    <string name="action_contacts">Contacts</string>
    <string name="agreed_t_and_c">*By signing in, you agree to our terms and conditions.</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_friends">Friends</string>
    <string name="continual_policy_p1">By continuing, you agree to our </string>
    <string name="continual_policy_p2"> Privacy Policy and Terms and Conditions</string>
    <string name="your_phone_has_been_successfully_verified">Your phone number has been successfully verified.</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="resend">Resend</string>
    <string name="your_phone_has_been_couldnot_be_verified">Your phone number couldn\'t be verified!</string>
    <string name="enter_code_manually">Enter code manually.</string>
    <string name="verify">Verify</string>
    <string name="enter_6_digit_otp">Enter 6 digit OTP</string>
    <string name="didn_t_get_a_code">Didn\'t get a code!</string>
    <string name="or">OR</string>
    <string name="have_a_code">Have a code?</string>
    <string name="update">Update</string>
    <string name="action_requests">Requests</string>
    <string name="action_history">History</string>
    <string name="action_map">Map</string>
    <string name="action_my_trips">My Trips</string>
    <string name="action_my_requests">My Requests</string>
    <string name="action_my_friends">My Friends</string>
    <string name="search_by_vehicle_number_phone_etc">Search by vehicle number, phone number, etc</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter password</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="action_vendors">Vendors</string>
    <string name="action_routes">Routes</string>
    <string name="action_vehicles">Vehicles</string>
    <string name="action_drivers">Drivers</string>
    <string name="action_admins">Admins</string>
    <string name="you_re_a_few_steps_away_from_an_amazing_experince">You\'re a few steps away from an amazing experience!</string>
    <string name="share_my_location">Share my location:</string>
    <string name="share_my_photo">Share my photo:</string>
    <string name="share_my_location_to">Share my location to:</string>
    <string name="friends_only">Friends only</string>
    <string name="anyone">Anyone</string>
    <string name="rather_not_to_anyone">Rather, not to anyone</string>
    <string name="want_to_change_your_password">Want to change your password?</string>
    <string name="change_my_password">Change My Password</string>
    <string name="save_preference">Save Preference</string>
    <string name="enter_code">Enter Code</string>
    <string name="vendor_s_phone">Vendor\'s Phone</string>
    <string name="add_a_source_to_route">Add a source to route</string>
    <string name="add_a_destination_to_route">Add a destination to route</string>
    <string name="label_assign_vehicle">Assign Vehicle</string>
    <string name="add_route_description">Add Route Description</string>
    <string name="add_waypoints">Add WayPoints</string>
    <string name="edit">Edit</string>
    <string name="success">Success!</string>
    <string name="cheers">Cheers!</string>
    <string name="sorry">Sorry!</string>
    <string name="whats_your_phone">What\'s your number?</string>
    <string name="send">Send</string>
    <string name="patience">Patience!</string>
    <string name="add_your_name_here">Name</string>
    <string name="add_your_email_here">Email</string>
    <string name="add_your_phone_here">Phone</string>
    <string name="prompt_no_stats_subheader">We don\'t have any further information or statistics.</string>
    <string name="prompt_no_vendor">You don\'t have any vendor registered. Add vendors and add your income.</string>
    <string name="prompt_no_stats_header">No statistics found.</string>
    <string name="oops_seems_we_found_nothing">Oops! Seems we found nothing.</string>
    <string name="search">Search</string>
    <string name="looking_for_statistics_report">Looking for statistics report…</string>
    <string name="add_child">Add child</string>
    <string name="storage_for_profile_photo">Storage for profile photo:</string>
    <string name="admin_s_phone">Admin\'s Phone</string>
    <string name="admin_s_name">Admin\'s Name</string>
    <string name="admin_code">Admin Code</string>
    <string name="security_password">Security Password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="password">Password</string>
    <string name="add_admin">Add Admin</string>
    <string name="as_user">Let\'s take a tour</string>
    <string name="as_user_prompt">Do you want to take a tour first and decide later?</string>
    <string name="admin">Admin</string>
    <string name="vendor">Vendor</string>
    <string name="driver">Driver</string>
    <string name="parent">Parent</string>
    <string name="who_are_you">How would you like to use?</string>
    <string name="who_are_you_prompt">Do you have any type of references from any organisation or do you represent an organisation?</string>
    <string name="look_for_accounts">Look for accounts</string>
    <string name="look_for_referrals">Look for referrals</string>
    <string name="registered_accounts_found">Registered accounts found</string>
    <string name="registered_referrals_found">Registered referrals found</string>
    <string name="action_accounts">Switch Account</string>
    <string name="action_share">Share</string>
    <string name="action_feedback">Feedback</string>
    <string name="done_continue">Done. Continue...</string>
</resources>
