<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:padding="@dimen/margin_4"
        android:text="@string/enter_code_manually"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_manual_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/enter_6_digit_otp"
        android:inputType="number"
        android:minWidth="200dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify_manual_otp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/verify"
        android:textSize="12sp"
        app:cornerRadius="@dimen/margin_16"/>

</LinearLayout>